--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -609,6 +609,61 @@ header{
     }
 }
 
+.usersList{
+    display:flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    margin-bottom:10px;
+
+    &_user{
+        border:1px solid rgb(200,200,200);
+        text-align: center;
+        border-radius: 50px;
+        padding:20px;
+        margin:0 5px;
+        width:30px;
+        height:30px;
+        font-weight:bolder;
+
+        &:hover{
+            border:1px solid rgb(100,100,100);
+            cursor:pointer;
+        }
+
+        &.isActive{
+            border:2px solid black;
+        }
+        
+        &.userColor_green{
+            border-color:rgb(69, 201, 113);
+        }
+
+        &.userColor_blue{
+            border-color:rgb(44, 113, 240);
+        }
+
+        &.userColor_red{
+            border-color:rgb(243, 66, 66);
+        }
+
+        &.userColor_yellow{
+            border-color:rgb(252, 193, 32);
+        }
+
+        &.userColor_orange{
+            border-color:rgb(250, 117, 55);
+        }
+
+        &.userColor_pink{
+            border-color:rgb(240, 44, 165);
+        }
+
+        &.userColor_grey{
+            border-color:rgb(114, 114, 114);
+        }
+    }
+}
+
 .longText{
     text-align:justify;           
 }
